--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # BlackHat Educational Firmware - Python Dependencies
+# Main system file: blackhat.py
 # Install with: pip3 install -r requirements.txt
 # Optimized for Raspberry Pi OS 32-bit
 
